# PhysiSimDT

./: .gitignore  CMakeLists.txt  README.md  devlog.md  main.cpp  physics.md
src/: Circle.cpp  Circle.h  Constants.h  GridKey.h  ObjectRenderer.cpp  ObjectRenderer.h  PhysicsObject.cpp  PhysicsObject.h  SpatialMap.cpp  SpatialMap.h  main.cpp  mainBackup.cpp
src/Physics/: Constants.cpp  Constants.h  GridKey.h  PhysicsState.h  SpatialHash.cpp  SpatialHash.h  SpatialHashMap.cpp  SpatialHashMap.h  SpatialMap.cpp  SpatialMap.h  Systems.cpp  Systems.h
src/Physics/Objects/: Circle.cpp  Circle.h  PhysicsObject.cpp  PhysicsObject.h
src/Physics/Simulations/: Collisions.cpp  Collisions.h  EM.cpp  EM.h  Gravity.cpp  Gravity.h  Menu.cpp  Menu.h  Simulation.h
src/UI/: Button.cpp  Button.h  Label.cpp  Label.h  Slider.cpp  Slider.h  Spinner.cpp  Spinner.h  UI.h
src/UI/SimInits/: CollisionsUI.cpp  EMUI.cpp  GravityUI.cpp  MenuUI.cpp
